--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <header>
       <img src="./landing-page-girl.svg" alt="" width="200px">
       <img src="./Rectangle 2.svg" alt="">
+      <section></section>
     </header>
   </body>
 </html>
