--- a/index.html
+++ b/index.html
@@ -4,13 +4,23 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>SOUNDWAVE</title>
   </head>
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Poppins&display=swap"
+    rel="stylesheet"
+  />
+  <link rel="stylesheet" href="./style.css">
   <body>
     <header>
-      <img src="./landing-page-girl.svg" alt="" width="200px">
-      <img src="./Rectangle 2.svg" alt="">
-      <section></section>
+      <img src="./svg files/Logo.svg" alt="" />
+     <a href="./index.html" target="_blank"><h1>soundwave</h1></a>
     </header>
+    <nav>
+     <a href="./about.html" target="_blank"><h1>discover</h1></a>
+      <a href="./join.html" target="_blank"><h1>join</h1></a>
+    </nav>
   </body>
 </html>
